Initial commit: Setting up NextAuth.js and project structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Julieluxevents - Premium Party Equipment Rentals & Sales</title>
-    <meta name="description" content="Rent or buy premium party equipment for any occasion. From intimate gatherings to grand celebrations, Julieluxevents has everything you need." />
-    <meta name="author" content="Julieluxevents" />
+    <title>Julie's Luxe Events & Rentals - Transforming Events into Experiences</title>
+    <meta name="description" content="Your premier event rental service in Sudbury. Transform your events into unforgettable experiences with Julie's Luxe Events & Rentals." />
+    <meta name="author" content="Julie's Luxe Events & Rentals" />
+    <meta property="og:title" content="Julie's Luxe Events & Rentals" />
+    <meta property="og:description" content="Transform your events into unforgettable experiences with Julie's Luxe Events & Rentals - Sudbury's premier event rental service." />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://www.afrocarribeanabroad.com" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -18,4 +22,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
